[package]
name = "httpproxy"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = "0.4"
regex = "1.10.5"
axum = "0.7"
tower = "0.4"
hyper-util = "0.1"
derivative = "2.2"
anycache = "1.0.1"
lazy_static = "1.5"
base64 = "0.22"
short-uuid = "0.1.0"
log4rs = { version="1.3.0", features = ["gzip", "background_rotation"] }

log = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
hyper = { version="1.4", features= ["client"] }
tokio = { version = "1", features = ["full"] }