[package]
name = "httpproxy"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = "0.4"
regex = "1"
hyper-util = {version = "0.1", features=["full"]}
anycache = "1"
lazy_static = "1"
bytes="1"
base64 = "0.22"
short-uuid = "0.1"
log4rs = { version="1", features = ["gzip", "background_rotation"] }
log = "0.4"
http-body-util = "0.1"
http = "1"
http-body = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
hyper = { version="1", features= ["server", "http1", "http2", "client"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "httpproxy"
path = "src/main.rs"
